--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
     <!--  Initial Meta Tags -->
     <title> The Movie Hub</title>
+    <meta name="title" content="The Movie Hub">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
