--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,42 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!--  Initial Meta Tags -->
-    <title> The Movie Hub</title>
+    <title> The Movies Hub</title>
     <meta name="title" content="The Movie Hub">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The Movies Hub is source for movies whose web  page is designed and implemented by AmaliTech Develoment Team.It has TV and celebrity content. 
+      Users can know the information about new and existing movies, find ratings and reviews for the newest movie and TV shows."
     />
+    <meta name="keywords"
+    content="Try Movie Hub, movies, tv, tv shows, person, celebrity, episode, season, cast, review, similar movies, similar tv shows, top rated movies, top rated tv shows, popular movies, popular tv shows, popular person " />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="language" content="English" />
+  <meta name="author" content="Ebenezer Ashong" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://github.com/eashong2021/trymoviehub.git">
+  <meta property="og:title" content="The Movies Hub">
+  <meta property="og:description"
+    content="The Movies Hub is source for movies whose web  page is designed and implemented by AmaliTech Develoment Team.It has TV and celebrity content. 
+    Users can know the information about new and existing movies, find ratings and reviews for the newest movie and TV shows.">
+    <meta property="og:image" content="%PUBLIC_URL%/assets/screenshot.png">
+
+ <!-- Twitter -->
+ <meta property="twitter:card" content="summary_large_image">
+ <meta property="twitter:url" content="https://github.com/eashong2021/trymoviehub.git">
+ <meta property="twitter:title" content="The Movies Hub"> 
+ <meta property="twitter:description"
+    content="The Movies Hub is source for movie, TV and celebrity content. Find ratings and reviews for the newest movie and TV shows.">
+  <meta property="twitter:image" content="%PUBLIC_URL%/assets/screenshot.png">
+  <meta name="title" content="The Movies Hub" />
+  <meta name="description"
+    content="The Movies Hub is source for movie, TV and celebrity content. Find ratings and reviews for the newest movie and TV shows." />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -46,6 +74,7 @@
       // When the single page app is loaded further down in this file,
       // the correct url will be waiting in the browser's history for
       // the single page app to route accordingly.
+
       (function(l) {
         if (l.search[1] === '/' ) {
           var decoded = l.search.slice(1).split('&').map(function(s) { 
