--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,11 @@
         }
       }(window.location))
     </script>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"
+  ></script>
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
